--- a/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
+++ b/03_Demystifying_table_sharding_tablets_and_data_distribution.ipynb
@@ -93,14 +93,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 👇 Import the notebook variables\n",
+    "### 👇 Import the notebook variables and style the notebook\n",
     "\n",
-    "> 👉 IMPORTANT! 👈\n",
+    "> 👉 **IMPORTANT!** 👈\n",
     "> \n",
-    "> Do **NOT** skip running the following cell. \n",
-    "> \n",
-    "\n",
-    "The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell. \n",
+    "> Do **NOT** skip running the following cells. \n",
+    ">\n",
+    "> The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell.  The cell after that styles the notebook.\n",
     "\n",
     "👇 👇 👇 "
    ]
@@ -112,16 +111,28 @@
    "outputs": [],
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
-    "# Use %store -r to read 01_Lab_Setup variables\n",
+    "%store -r \n",
+    "%config SqlMagic.named_parameters=True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Update the styling of the notebook**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
     "    styles = open(\"./styles/custom.css\", \"r\").read()\n",
     "    return HTML(styles)\n",
-    "css_styling()\n",
-    "\n",
-    "%store -r \n",
-    "\n",
-    "%config SqlMagic.named_parameters=True"
+    "css_styling()"
    ]
   },
   {
@@ -155,8 +166,8 @@
     "import sqlalchemy as alc\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "db_host = MY_HOST_IPv4_01\n",
-    "db_name = MY_DB_NAME\n",
+    "db_host = NB_HOST_IPv4_01\n",
+    "db_name = NB_DB_NAME\n",
     "\n",
     "connection_str = 'postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
     "\n",
@@ -196,7 +207,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> IMPORTANT!\n",
+    "> 👉 **IMPORTANT!** 👈\n",
+    "> \n",
     ">   \n",
     "> In order to create the prepared statements for the SQL magic connection, you must run the following cell!!!\n",
     "> \n",
@@ -212,10 +224,10 @@
    "source": [
     "#%% python, but prepared statements as sql magic\n",
     "\n",
-    "if (MY_YB_MASTER_HOST_GITPOD_URL is None):\n",
+    "if (NB_YB_MASTER_HOST_GITPOD_URL is None):\n",
     "    a = %sql select fn_yb_create_stmts()\n",
     "else:\n",
-    "    a = %sql select fn_yb_create_stmts(:MY_YB_MASTER_HOST_GITPOD_URL )\n",
+    "    a = %sql select fn_yb_create_stmts(:NB_YB_MASTER_HOST_GITPOD_URL )\n",
     "print (a)"
    ]
   },
@@ -291,13 +303,13 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_no_pk\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_no_pk\""
    ]
   },
   {
@@ -421,14 +433,14 @@
     "#%% python, but prepared statements as sql magic\n",
     "THIS_TABLE_NAME = 'tbl_no_pk'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
-    "DB_NAME = MY_DB_NAME\n",
+    "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
     "print (view_gitpod_url)\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
     "# print (view_local_url)"
    ]
   },
@@ -608,13 +620,13 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_pk_hash\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_pk_hash\""
    ]
   },
   {
@@ -635,14 +647,14 @@
     "#%% python, but prepared statements as sql magic\n",
     "THIS_TABLE_NAME = 'tbl_pk_hash'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
-    "DB_NAME = MY_DB_NAME\n",
+    "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
     "print (view_gitpod_url)\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
     "# print (view_local_url)"
    ]
   },
@@ -971,13 +983,13 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_pk_hash_ck_asc\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_pk_hash_ck_asc\""
    ]
   },
   {
@@ -995,7 +1007,7 @@
    "outputs": [],
    "source": [
     "MY_OBJECT_NAME = \"tbl_pk_hash_ck_asc\"\n",
-    "%store MY_OBJECT_NAME\n"
+    "%store MY_OBJECT_NAME"
    ]
   },
   {
@@ -1016,16 +1028,16 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_OBJECT_NAME\"  --out MY_TABLE_ID\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" \"$MY_OBJECT_NAME\"  --out MY_TABLE_ID\n",
     "\n",
-    "YB_PATH=${1}\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "OBJECT_NAME=${3}\n",
     "\n",
-    "cd $YB_PATH\n",
-    "MY_TABLE_ID=$(./bin/ysqlsh -d ${DB_NAME} -t -c \"select fn_get_table_id_from_pg('${DB_NAME}','public','${OBJECT_NAME}');\")\n",
+    "cd $YB_PATH_BIN\n",
+    "TABLE_ID=$(./ysqlsh -d ${DB_NAME} -t -c \"select fn_get_table_id_from_pg('${DB_NAME}','public','${OBJECT_NAME}');\")\n",
     "\n",
-    "echo $MY_TABLE_ID"
+    "echo $TABLE_ID"
    ]
   },
   {
@@ -1064,15 +1076,15 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_DB_NAME\" \"$MY_OBJECT_NAME\" \"$MY_HOST_IPv4_01\" --out MY_TABLET_ID\n",
+    "%%bash -s \"$NB_DB_NAME\" \"$MY_OBJECT_NAME\" \"$NB_HOST_IPv4_01\" --out MY_TABLET_ID\n",
     "\n",
     "DB_NAME=${1}\n",
     "OBJECT_NAME=$( echo \"${2}\" | tr -d \" \")\n",
     "HOST_IPv4=$( echo \"${3}\" | tr -d \" \")\n",
     "# can use WORKSPACE_URL\n",
-    "MY_URL=\"http://${HOST_IPv4}:8200/metrics\"\n",
+    "HOST_URL=\"http://${HOST_IPv4}:8200/metrics\"\n",
     "\n",
-    "TABLET_ID=`wget -cq  ${MY_URL}  -O - |  jq --raw-output ' .[] | select(.attributes.namespace_name==\"'$DB_NAME'\" and .type==\"tablet\" and .attributes.table_name==\"'$OBJECT_NAME'\") | {tablet_id: .id, metrics: .metrics[] | select(.name == (\"is_raft_leader\") ) | select(.value == 1) } | select(.tablet_id) | {tablet_id} | .tablet_id '`\n",
+    "TABLET_ID=`wget -cq  ${HOST_URL}  -O - |  jq --raw-output ' .[] | select(.attributes.namespace_name==\"'$DB_NAME'\" and .type==\"tablet\" and .attributes.table_name==\"'$OBJECT_NAME'\") | {tablet_id: .id, metrics: .metrics[] | select(.name == (\"is_raft_leader\") ) | select(.value == 1) } | select(.tablet_id) | {tablet_id} | .tablet_id '`\n",
     "\n",
     "echo ${TABLET_ID}"
    ]
@@ -1113,12 +1125,12 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_HOST_IPv4_01\" \"$MY_TABLE_ID\" \n",
-    "YB_PATH=$( echo \"${1}\" | tr -d \" \")\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_HOST_IPv4_01\" \"$MY_TABLE_ID\" \n",
+    "YB_PATH_BIN=$( echo \"${1}\" | tr -d \" \")\n",
     "HOST_IPv4=$( echo \"${2}\" | tr -d \" \")\n",
     "TABLE_ID=$( echo \"${3}\" | tr -d \" \")\n",
     "\n",
-    "cd $YB_PATH/bin\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "./yb-admin -init_master_addrs ${HOST_IPv4}:7100 flush_table_by_id ${TABLE_ID} 600"
    ]
@@ -1141,13 +1153,13 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_YB_PATH_DATA\" \"$MY_TABLE_ID\" \"$MY_TABLET_ID\" # Import file path of Yugabyte and DB name\n",
-    "YB_PATH=$( echo \"${1}\" | tr -d \" \")\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_YB_PATH_DATA\" \"$MY_TABLE_ID\" \"$MY_TABLET_ID\" # Import file path of Yugabyte and DB name\n",
+    "YB_PATH_BIN=$( echo \"${1}\" | tr -d \" \")\n",
     "YB_PATH_DATA=$( echo \"${2}\" | tr -d \" \")\n",
     "TABLE_ID=$( echo \"${3}\" | tr -d \" \")\n",
     "TABLET_ID=$( echo \"${4}\" | tr -d \" \")\n",
     "\n",
-    "cd $YB_PATH/bin/\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "TABLE_ID_PATH=${YB_PATH_DATA}/node1/data/yb-data/tserver/data/rocksdb/table-${TABLE_ID}\n",
     "TABLET_ID_PATH=${TABLE_ID_PATH}/tablet-${TABLET_ID}\n",
@@ -1164,7 +1176,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You can go back to the beginning of  ***What's on disk?** an alter the Primary Key definition and run through the SST dump again. "
+    "You can go back to the beginning of **What's on disk?**.\n",
+    "\n",
+    "Then, alter the Primary Key definition and run through the SST dump again. \n",
+    "\n",
+    "What differences do you see in the `SubDocKey`?"
    ]
   },
   {
@@ -1241,14 +1257,14 @@
     "#%% python, but prepared statements as sql magic\n",
     "THIS_TABLE_NAME = 'tbl_pk_range'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
-    "DB_NAME = MY_DB_NAME\n",
+    "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
     "print (view_gitpod_url)\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
     "# print (view_local_url)"
    ]
   },
@@ -1288,6 +1304,7 @@
     "YugabyteDB will automatically split this tablet based on the size of the table on disk. The following global flags determine this behavior:\n",
     "\n",
     "```\n",
+    "\n",
     "--tablet_force_split_threshold_bytes=107374182400 --> 10240 MB\n",
     "--tablet_split_high_phase_shard_count_per_node=24\n",
     "--tablet_split_high_phase_size_threshold_bytes=10737418240 --> 10240 MB\n",
@@ -1684,7 +1701,7 @@
    "metadata": {},
    "source": [
     "## 😊 Next up!\n",
-    "Continue your learning by opening the next notebook, `04_Anatomy_of_an_Index.ipynb`. \n",
+    "Continue your learning by opening the next notebook, `04_AnatoNB_of_an_Index.ipynb`. \n",
     "\n",
     "Or, to open the notebook from GitPod, run the following:"
    ]
@@ -1700,7 +1717,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "gp open `04_Anatomy_of_an_Index.ipynb`"
+    "gp open `04_AnatoNB_of_an_Index.ipynb`"
    ]
   }
  ],
