--- a/04_Anatomy_of_an_Index.ipynb
+++ b/04_Anatomy_of_an_Index.ipynb
@@ -94,14 +94,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 👇 Import the notebook variables\n",
+    "### 👇 Import the notebook variables and style the notebook\n",
     "\n",
-    "> 👉 IMPORTANT! 👈\n",
+    "> 👉 **IMPORTANT!** 👈\n",
     "> \n",
-    "> Do **NOT** skip running the following cell. \n",
-    "> \n",
-    "\n",
-    "The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell. \n",
+    "> Do **NOT** skip running the following cells. \n",
+    ">\n",
+    "> The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell.  The cell after that styles the notebook.\n",
     "\n",
     "👇 👇 👇 "
    ]
@@ -113,15 +112,28 @@
    "outputs": [],
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
+    "%store -r \n",
+    "%config SqlMagic.named_parameters=True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Update the styling of the notebook**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
     "    styles = open(\"./styles/custom.css\", \"r\").read()\n",
     "    return HTML(styles)\n",
-    "css_styling()\n",
-    "\n",
-    "%store -r \n",
-    "\n",
-    "%config SqlMagic.named_parameters=True"
+    "css_styling()"
    ]
   },
   {
@@ -149,8 +161,8 @@
     "import sqlalchemy as alc\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "db_host = MY_HOST_IPv4_01\n",
-    "db_name = MY_DB_NAME\n",
+    "db_host = NB_HOST_IPv4_01\n",
+    "db_name = NB_DB_NAME\n",
     "\n",
     "connection_str = 'postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
     "\n",
@@ -190,7 +202,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> IMPORTANT!\n",
+    "> 👉 **IMPORTANT!** 👈\n",
+    "> \n",
     ">   \n",
     "> In order to create the prepared statements for the SQL magic connection, you must run the following cell!!!\n",
     "> \n",
@@ -206,10 +219,10 @@
    "source": [
     "#%% python, but prepared statements as sql magic\n",
     "\n",
-    "if (MY_YB_MASTER_HOST_GITPOD_URL is None):\n",
+    "if (NB_YB_MASTER_HOST_GITPOD_URL is None):\n",
     "    a = %sql select fn_yb_create_stmts()\n",
     "else:\n",
-    "    a = %sql select fn_yb_create_stmts(:MY_YB_MASTER_HOST_GITPOD_URL )\n",
+    "    a = %sql select fn_yb_create_stmts(:NB_YB_MASTER_HOST_GITPOD_URL )\n",
     "print (a)"
    ]
   },
@@ -278,15 +291,15 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # \\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\"  # \\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_cities\"\n",
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_cities\"\n",
     "\n",
-    "# ./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ idx_cities_city_name_range\""
+    "# ./ysqlsh -d ${DB_NAME} -c \"\\d+ idx_cities_city_name_range\""
    ]
   },
   {
@@ -369,13 +382,13 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # \\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\"  # \\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ idx_cities_city_name_range\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ idx_cities_city_name_range\""
    ]
   },
   {
@@ -410,14 +423,14 @@
     "#%% python, but prepared statements as sql magic\n",
     "THIS_INDEX_NAME = 'idx_cities_city_name_range'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
-    "DB_NAME = MY_DB_NAME\n",
+    "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_gitpod_url\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_gitpod_url\n",
     "print (view_gitpod_url)\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_local_url\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_local_url\n",
     "# print (view_local_url)"
    ]
   },
@@ -461,6 +474,7 @@
     "YugabyteDB will automatically split this tablet based on the size of the table on disk. The following global flags determine this behavior:\n",
     "\n",
     "```\n",
+    "\n",
     "--tablet_force_split_threshold_bytes=107374182400 --> 10240 MB\n",
     "--tablet_split_high_phase_shard_count_per_node=24\n",
     "--tablet_split_high_phase_size_threshold_bytes=10737418240 --> 10240 MB\n",
@@ -965,14 +979,14 @@
     "#%% python, but prepared statements as sql magic\n",
     "THIS_INDEX_NAME = 'idx_cities_city_name_hash'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
-    "DB_NAME = MY_DB_NAME\n",
+    "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_gitpod_url\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_gitpod_url\n",
     "print (view_gitpod_url)\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_local_url\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_local_url\n",
     "# print (view_local_url)"
    ]
   },
