--- a/05_Using_GIN_Indexes.ipynb
+++ b/05_Using_GIN_Indexes.ipynb
@@ -133,14 +133,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 👇 Import the notebook variables\n",
+    "### 👇 Import the notebook variables and style the notebook\n",
     "\n",
-    "> 👉 IMPORTANT! 👈\n",
+    "> 👉 **IMPORTANT!** 👈\n",
     "> \n",
-    "> Do **NOT** skip running the following cell. \n",
-    "> \n",
-    "\n",
-    "The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell. \n",
+    "> Do **NOT** skip running the following cells. \n",
+    ">\n",
+    "> The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell.  The cell after that styles the notebook.\n",
     "\n",
     "👇 👇 👇 "
    ]
@@ -152,15 +151,28 @@
    "outputs": [],
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
+    "%store -r \n",
+    "%config SqlMagic.named_parameters=True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Update the styling of the notebook**."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
     "    styles = open(\"./styles/custom.css\", \"r\").read()\n",
     "    return HTML(styles)\n",
-    "css_styling()\n",
-    "\n",
-    "%store -r \n",
-    "\n",
-    "%config SqlMagic.named_parameters=True"
+    "css_styling()"
    ]
   },
   {
@@ -186,8 +198,8 @@
     "import sqlalchemy as alc\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "db_host = MY_HOST_IPv4_01\n",
-    "db_name = MY_DB_NAME\n",
+    "db_host = NB_HOST_IPv4_01\n",
+    "db_name = NB_DB_NAME\n",
     "\n",
     "connection_str = 'postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
     "\n",
@@ -227,11 +239,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> IMPORTANT!\n",
+    "> 👉 **IMPORTANT!** 👈\n",
     ">   \n",
     "> In order to create the prepared statements for the SQL magic connection, you must run the following cell!!!\n",
     "> \n",
-    "> Do not skip this step.\n",
+    "> **Do not skip this step**.\n",
     "> "
    ]
   },
@@ -242,10 +254,10 @@
    "outputs": [],
    "source": [
     "#%% python, but prepared statements as sql magic\n",
-    "if (MY_GITPOD_WORKSPACE_URL is None):\n",
+    "if (NB_GITPOD_WORKSPACE_URL is None):\n",
     "    a = %sql select fn_yb_create_stmts()\n",
     "else:\n",
-    "    WORKSPACE_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
+    "    WORKSPACE_URL = NB_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
     "    a = %sql select fn_yb_create_stmts(:WORKSPACE_URL)\n",
     "\n",
     "print (a)"
@@ -299,8 +311,8 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_DATA_FOLDER\" \"$MY_GIN_EXAMPLES\"   # GIN\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" \"$NB_NOTEBOOK_DATA_FOLDER\" \"$NB_GIN_EXAMPLES\"   # GIN\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "DATA_FOLDER=${3}\n",
     "GIN_EXAMPLES=${4}\n",
@@ -310,16 +322,16 @@
     "\n",
     "GIN_EXAMPLE_PATH=${DATA_FOLDER}/${GIN_EXAMPLES}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "echo $GIN_EXAMPLE_PATH\n",
     "# GIN Examples file\n",
-    "./bin/ysqlsh -d ${DB_NAME} -f ${GIN_EXAMPLE_PATH} >&/dev/null\n",
+    "./ysqlsh -d ${DB_NAME} -f ${GIN_EXAMPLE_PATH} >&/dev/null\n",
     "\n",
     "sleep 1;\n",
     "\n",
     "\n",
     "# Describe relations\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_arrays\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_arrays\""
    ]
   },
   {
@@ -819,30 +831,30 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_DATA_FOLDER\" \"$MY_GITHUB_DATA_FILE\"\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" \"$NB_NOTEBOOK_DATA_FOLDER\" \"$NB_GITHUB_DATA_FILE\"\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "DATA_FOLDER=${3}\n",
     "GITHUB_DATA_FILE=${4}\n",
     "\n",
     "GITHUB_DATA_FILE_PATH=${DATA_FOLDER}/${GITHUB_DATA_FILE}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "echo ${GITHUB_DATA_FILE_PATH} \n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"drop table if exists tmp_commits;\";\n",
+    "./ysqlsh -d ${DB_NAME} -c \"drop table if exists tmp_commits;\";\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"drop table if exists tbl_commits;\";\n",
+    "./ysqlsh -d ${DB_NAME} -c \"drop table if exists tbl_commits;\";\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"create table tmp_commits (j jsonb);\";\n",
+    "./ysqlsh -d ${DB_NAME} -c \"create table tmp_commits (j jsonb);\";\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"create table tbl_commits (j jsonb);\";\n",
+    "./ysqlsh -d ${DB_NAME} -c \"create table tbl_commits (j jsonb);\";\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\copy tmp_commits (j) FROM \"${GITHUB_DATA_FILE_PATH}\";\"\n",
+    "./ysqlsh -d ${DB_NAME} -c \"\\copy tmp_commits (j) FROM \"${GITHUB_DATA_FILE_PATH}\";\"\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"insert into tbl_commits select jsonb_array_elements(j) from tmp_commits;\"\n",
+    "./ysqlsh -d ${DB_NAME} -c \"insert into tbl_commits select jsonb_array_elements(j) from tmp_commits;\"\n",
     "\n",
-    "#./bin/ysqlsh -d ${DB_NAME} -c \"select jsonb_array_elements(j) from tmp_commits \""
+    "#./ysqlsh -d ${DB_NAME} -c \"select jsonb_array_elements(j) from tmp_commits \""
    ]
   },
   {
@@ -1083,13 +1095,13 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # \\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\"  # \\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_commits\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_commits\""
    ]
   },
   {
@@ -1110,14 +1122,14 @@
     "#%% python, but prepared statements as sql magic\n",
     "THIS_INDEX_NAME = 'idx_commits_ybgin_j'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
-    "DB_NAME = MY_DB_NAME\n",
+    "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_gitpod_url\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_gitpod_url\n",
     "print (view_gitpod_url)\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_local_url\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_local_url\n",
     "# print (view_local_url)"
    ]
   },
@@ -1351,13 +1363,13 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # \\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\"  # \\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_commits\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_commits\""
    ]
   },
   {
@@ -1378,14 +1390,14 @@
     "#%% python, but prepared statements as sql magic\n",
     "THIS_INDEX_NAME = 'idx_commits_j_path_ops'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
-    "DB_NAME = MY_DB_NAME\n",
+    "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_gitpod_url\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_gitpod_url\n",
     "print (view_gitpod_url)\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_local_url\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_local_url\n",
     "# print (view_local_url)"
    ]
   },
@@ -1836,20 +1848,20 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_DATA_FOLDER\" \"$MY_JEOPARDY_DATA_FILE\"\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" \"$NB_NOTEBOOK_DATA_FOLDER\" \"$NB_JEOPARDY_DATA_FILE\"\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "DATA_FOLDER=${3}\n",
     "JEOPARDY_DATA_FILE=${4}\n",
     "\n",
     "JEOPARDY_DATA_FILE_PATH=${DATA_FOLDER}/${JEOPARDY_DATA_FILE}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "echo ${JEOPARDY_DATA_FILE_PATH} \n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"SET yb_index_state_flags_update_delay TO '0s'\";\n",
+    "./ysqlsh -d ${DB_NAME} -c \"SET yb_index_state_flags_update_delay TO '0s'\";\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\copy tbl_jeopardy (round, value, daily_double, category, comments, answer, question, air_date, notes) FROM \"${JEOPARDY_DATA_FILE_PATH}\" WITH DELIMITER E'\\t' CSV HEADER;\"\n"
+    "./ysqlsh -d ${DB_NAME} -c \"\\copy tbl_jeopardy (round, value, daily_double, category, comments, answer, question, air_date, notes) FROM \"${JEOPARDY_DATA_FILE_PATH}\" WITH DELIMITER E'\\t' CSV HEADER;\"\n"
    ]
   },
   {
@@ -1870,13 +1882,13 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # \\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\"  # \\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_jeopardy\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_jeopardy\""
    ]
   },
   {
@@ -2130,13 +2142,13 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # \\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\"  # \\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_jeopardy\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_jeopardy\""
    ]
   },
   {
@@ -2167,14 +2179,14 @@
     "#%% python, but prepared statements as sql magic\n",
     "THIS_INDEX_NAME = 'idx_jeopardy_ybgin_answer_vec'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
-    "DB_NAME = MY_DB_NAME\n",
+    "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_gitpod_url\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_gitpod_url\n",
     "print (view_gitpod_url)\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_local_url\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_INDEX_NAME ) as view_local_url\n",
     "# print (view_local_url)"
    ]
   },
@@ -2218,6 +2230,7 @@
     "YugabyteDB will automatically split this tablet based on the size of the table on disk. The following global flags determine this behavior:\n",
     "\n",
     "```\n",
+    "\n",
     "--tablet_force_split_threshold_bytes=107374182400 --> 10240 MB\n",
     "--tablet_split_high_phase_shard_count_per_node=24\n",
     "--tablet_split_high_phase_size_threshold_bytes=10737418240 --> 10240 MB\n",
@@ -2610,13 +2623,13 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # \\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\"  # \\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_jeopardy\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ tbl_jeopardy\""
    ]
   },
   {
@@ -2768,7 +2781,7 @@
    "outputs": [],
    "source": [
     "%%sql\n",
-    "execute  stmt_util_metrics_snap_reset;\n"
+    "execute  stmt_util_metrics_snap_reset;"
    ]
   },
   {
@@ -2815,7 +2828,8 @@
    "metadata": {},
    "source": [
     "---\n",
-    "#### unaccent"
+    "#### unaccent\n",
+    "`unaccent` is a text search dictionary that removes accents (diacritic signs) from lexemes. It's a filtering dictionary, which means its output is always passed to the next dictionary (if any), unlike the normal behavior of dictionaries. This allows accent-insensitive processing for full text search."
    ]
   },
   {
@@ -2879,8 +2893,8 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_DATA_FOLDER\" \"$MY_GIN_EXAMPLES\"   # GIN\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" \"$NB_NOTEBOOK_DATA_FOLDER\" \"$NB_GIN_EXAMPLES\"   # GIN\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "DATA_FOLDER=${3}\n",
     "GIN_EXAMPLES=${4}\n",
@@ -2890,10 +2904,10 @@
     "\n",
     "DDL_1=\"alter text search configuration fr alter mapping for hword, hword_part, word with unaccent,french_stem;\"\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "echo $DDL_1\n",
     "# GIN Examples file\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c ${DDL_1} \n",
+    "./ysqlsh -d ${DB_NAME} -c ${DDL_1} \n",
     "\n",
     "sleep 1;"
    ]
@@ -2903,12 +2917,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "GIN index removes the stop words\n",
-    "-de\n",
-    "-la\n",
-    "en\n",
+    "GIN index removes the `stop words`:\n",
+    "- `de`\n",
+    "- `la`\n",
+    "- `en`\n",
     "\n",
-    "stop word pruning"
+    "This is `stop word` pruning. To demonstrate, create a table of with a column of the type, `tsvector`. Then, create a GIN index. Insert a few rows, and review the results."
    ]
   },
   {
@@ -2921,14 +2935,19 @@
    },
    "outputs": [],
    "source": [
-    "%%sql\n",
+    "%%sql3\n",
     "create table tbl_fr (v tsvector);\n",
     "\n",
     "create index on tbl_fr using gin (v);\n",
     "insert into tbl_fr values (to_tsvector (' fr','Café de la Presse')) ;\n",
-    "\n",
-    "insert into tbl_fr values (to_tsvector (' fr',  'Hôtel en bord de mer!')) ;\n",
-    "\n"
+    "insert into tbl_fr values (to_tsvector (' fr',  'Hôtel en bord de mer!')) ;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "View the results."
    ]
   },
   {
