--- a/06_YSQL_Development_Advanced.ipynb
+++ b/06_YSQL_Development_Advanced.ipynb
@@ -77,14 +77,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 👇 Import the notebook variables\n",
+    "### 👇 Import the notebook variables and style the notebook\n",
     "\n",
-    "> 👉 IMPORTANT! 👈\n",
+    "> 👉 **IMPORTANT!** 👈\n",
     "> \n",
-    "> Do **NOT** skip running the following cell. \n",
-    "> \n",
-    "\n",
-    "The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell. \n",
+    "> Do **NOT** skip running the following cells. \n",
+    ">\n",
+    "> The following Python cell reads the stored variables created in the `01_Lab_Setup.ipynb` notebook. To run the script, select Execute Cell (Play Arrow) in the left gutter of the cell.  The cell after that styles the notebook.\n",
     "\n",
     "👇 👇 👇 "
    ]
@@ -96,15 +95,28 @@
    "outputs": [],
    "source": [
     "# Use %store -r to read 01_Lab_Setup variables\n",
+    "%store -r \n",
+    "%config SqlMagic.named_parameters=True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Update the styling of the notebook.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
     "    styles = open(\"./styles/custom.css\", \"r\").read()\n",
     "    return HTML(styles)\n",
-    "css_styling()\n",
-    "\n",
-    "%store -r \n",
-    "\n",
-    "%config SqlMagic.named_parameters=True"
+    "css_styling()"
    ]
   },
   {
@@ -138,8 +150,8 @@
     "import sqlalchemy as alc\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "db_host = MY_HOST_IPv4_01\n",
-    "db_name = MY_DB_NAME\n",
+    "db_host = NB_HOST_IPv4_01\n",
+    "db_name = NB_DB_NAME\n",
     "\n",
     "connection_str = 'postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
     "\n",
@@ -179,11 +191,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> IMPORTANT!\n",
+    "> 👉 **IMPORTANT!** 👈\n",
     ">   \n",
     "> In order to create the prepared statements for the SQL magic connection, you must run the following cell!!!\n",
     "> \n",
-    "> Do not skip this step.\n",
+    "> **Do not skip this step**.\n",
     "> "
    ]
   },
@@ -194,10 +206,10 @@
    "outputs": [],
    "source": [
     "#%% python, but prepared statements as sql magic\n",
-    "if (MY_GITPOD_WORKSPACE_URL is None):\n",
+    "if (NB_GITPOD_WORKSPACE_URL is None):\n",
     "    a = %sql select fn_yb_create_stmts()\n",
     "else:\n",
-    "    WORKSPACE_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
+    "    WORKSPACE_URL = NB_GITPOD_WORKSPACE_URL.replace('https://','https://7000-')\n",
     "    a = %sql select fn_yb_create_stmts(:WORKSPACE_URL)\n",
     "\n",
     "print (a)"
@@ -290,8 +302,8 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_DATA_FOLDER\" \"$MY_DATA_DDL_FILE_3\" \"$MY_DATA_DML_FILE_3\"   # tbl_order_changes\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" \"$NB_NOTEBOOK_DATA_FOLDER\" \"$NB_DATA_DDL_FILE_3\" \"$NB_DATA_DML_FILE_3\"   # tbl_order_changes\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "DATA_FOLDER=${3}\n",
     "DATA_DDL_FILE=${4}\n",
@@ -303,14 +315,14 @@
     "echo $ORDER_DDL_PATH\n",
     "echo $ORDER_DML_PATH\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "# DDL file\n",
-    "./bin/ysqlsh -d ${DB_NAME} -f ${ORDER_DDL_PATH} >&/dev/null\n",
+    "./ysqlsh -d ${DB_NAME} -f ${ORDER_DDL_PATH} >&/dev/null\n",
     "sleep 1;\n",
     "\n",
     "# DML file\n",
-    "./bin/ysqlsh -d ${DB_NAME} -f ${ORDER_DML_PATH} >&/dev/null\n",
+    "./ysqlsh -d ${DB_NAME} -f ${ORDER_DML_PATH} >&/dev/null\n",
     "sleep 1;"
    ]
   },
@@ -332,15 +344,15 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_DATA_FOLDER\" \"$MY_DATA_DDL_FILE_3\" \"$MY_DATA_DML_FILE_3\"   # tbl_order_changes\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" \"$NB_NOTEBOOK_DATA_FOLDER\" \"$NB_DATA_DDL_FILE_3\" \"$NB_DATA_DML_FILE_3\"   # tbl_order_changes\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "\n",
     "# Describe tables\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d public.tbl_order_*\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d public.tbl_order_*\""
    ]
   },
   {
@@ -389,14 +401,14 @@
     "# THIS_TABLE_NAME='tbl_order_changes'\n",
     "THIS_TABLE_NAME='tbl_order_changes_prtn_2023_01'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
-    "DB_NAME = MY_DB_NAME\n",
+    "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
     "print (view_gitpod_url)\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
     "# print (view_local_url)"
    ]
   },
@@ -665,14 +677,14 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_DATA_FOLDER\" \"$MY_DATA_DDL_FILE_3\" \"$MY_DATA_DML_FILE_3\"   # tbl_order_changes\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" \"$NB_NOTEBOOK_DATA_FOLDER\" \"$NB_DATA_DDL_FILE_3\" \"$NB_DATA_DML_FILE_3\"   # tbl_order_changes\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "# Describe tables\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d+ public.idx_order_*\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d+ public.idx_order_*\""
    ]
   },
   {
@@ -760,7 +772,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print (MY_YB_MASTER_HOST_GITPOD_URL)"
+    "print (NB_YB_MASTER_HOST_GITPOD_URL)"
    ]
   },
   {
@@ -808,11 +820,11 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "#  can't do with sql magic \n",
     "# needs double quote esacpe for bash because of JSON\n",
@@ -825,7 +837,7 @@
     "# );\n",
     "DDL_TABLESPACE_US=\"drop tablespace if exists tblspace_us; create tablespace tblspace_us with (replica_placement='{\"\\\"num_replicas\"\\\": 1, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud1\"\\\", \"\\\"region\"\\\": \"\\\"region1\"\\\", \"\\\"zone\"\\\": \"\\\"zone1\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
     "\n",
-    "echo $DDL_TABLESPACE_US | ./bin/ysqlsh -d ${DB_NAME}"
+    "echo $DDL_TABLESPACE_US | ./ysqlsh -d ${DB_NAME}"
    ]
   },
   {
@@ -846,18 +858,18 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "#  can't do with sql magic \n",
     "# needs double quote esacpe for bash because of JSON\n",
     "\n",
     "DDL_TABLESPACE_EU=\"drop tablespace if exists tblspace_eu; create tablespace tblspace_eu with (replica_placement='{\"\\\"num_replicas\"\\\": 1, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud1\"\\\", \"\\\"region\"\\\": \"\\\"region2\"\\\", \"\\\"zone\"\\\": \"\\\"zone2\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
     "\n",
-    "echo $DDL_TABLESPACE_EU | ./bin/ysqlsh -d ${DB_NAME}\n",
+    "echo $DDL_TABLESPACE_EU | ./ysqlsh -d ${DB_NAME}\n",
     "\n",
     "\n"
    ]
@@ -880,18 +892,18 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" #\\d+\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" #\\d+\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "#  can't do with sql magic \n",
     "# needs double quote esacpe for bash because of JSON\n",
     "\n",
     "DDL_TABLESPACE_AP=\"drop tablespace if exists tblspace_ap; create tablespace tblspace_ap with (replica_placement='{\"\\\"num_replicas\"\\\": 1, \"\\\"placement_blocks\"\\\": [{ \"\\\"cloud\"\\\": \"\\\"cloud1\"\\\", \"\\\"region\"\\\": \"\\\"region3\"\\\", \"\\\"zone\"\\\": \"\\\"zone3\"\\\", \"\\\"min_num_replicas\"\\\": 1}]}');\" \n",
     "\n",
-    "echo $DDL_TABLESPACE_AP | ./bin/ysqlsh -d ${DB_NAME}\n",
+    "echo $DDL_TABLESPACE_AP | ./ysqlsh -d ${DB_NAME}\n",
     "\n",
     "\n"
    ]
@@ -906,14 +918,14 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  \n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\"  \n",
     "\n",
-    "YB_PATH=${1}\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\db+ tblspace_*\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\db+ tblspace_*\""
    ]
   },
   {
@@ -1062,14 +1074,14 @@
     "#%% python, but prepared statements as sql magic\n",
     "THIS_TABLE_NAME = 'tbl_transactions'\n",
     "THIS_SCHEMA_NAME = 'public'\n",
-    "DB_NAME = MY_DB_NAME\n",
+    "DB_NAME = NB_DB_NAME\n",
     "\n",
     "## Comment out if local\n",
-    "view_gitpod_url = %sql select fn_get_table_id_url(:MY_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
+    "view_gitpod_url = %sql select fn_get_table_id_url(:NB_YB_MASTER_HOST_GITPOD_URL,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_gitpod_url\n",
     "print (view_gitpod_url)\n",
     "\n",
     "## Uncomment if local\n",
-    "# view_local_url = %sql select fn_get_table_id_url(:MY_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
+    "# view_local_url = %sql select fn_get_table_id_url(:NB_HOST_IPv4_01,7000,:DB_NAME,:THIS_SCHEMA_NAME,:THIS_TABLE_NAME ) as view_local_url\n",
     "# print (view_local_url)"
    ]
   },
@@ -1317,9 +1329,9 @@
    "outputs": [],
    "source": [
     "# connect use Python 3.7.9+\n",
-    "db_host=MY_HOST_IPv4_02\n",
-    "# db_host=MY_HOST_IPv4_03\n",
-    "db_name=MY_DB_NAME\n",
+    "db_host=NB_HOST_IPv4_02\n",
+    "# db_host=NB_HOST_IPv4_03\n",
+    "db_name=NB_DB_NAME\n",
     "\n",
     "connection_str='postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n"
    ]
