--- a/01_Lab_Setup.ipynb
+++ b/01_Lab_Setup.ipynb
@@ -154,7 +154,7 @@
    "source": [
     "### 👇 Create the notebook variables \n",
     "\n",
-    "> 👉 IMPORTANT! 👈\n",
+    "> 👉 **IMPORTANT!** 👈\n",
     "> \n",
     "> Do **NOT** skip running this cell. \n",
     "> \n",
@@ -194,99 +194,99 @@
     "#\n",
     "### Uncomment Gitpod specific\n",
     "#\n",
-    "MY_YB_PATH=os.environ.get('MY_YB_PATH_GITPOD')\n",
-    "MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_GITPOD')\n",
-    "MY_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
+    "NB_YB_PATH_BIN=os.environ.get('ENV_YB_PATH_BIN_GITPOD')\n",
+    "NB_YB_PATH_DATA=os.environ.get('ENV_YB_PATH_DATA_GITPOD')\n",
+    "NB_GITPOD_WORKSPACE_URL=os.environ.get('GITPOD_WORKSPACE_URL')\n",
     "\n",
     "### Comment out Local \n",
     "#\n",
-    "# MY_YB_PATH=os.environ.get('MY_YB_PATH_LOCAL')\n",
-    "# MY_YB_PATH_DATA=os.environ.get('MY_YB_PATH_DATA_LOCAL')\n",
-    "# MY_GITPOD_WORKSPACE_URL=os.environ.get('MY_GITPOD_WORKSPACE_URL_LOCAL')\n",
+    "# NB_YB_PATH_BIN=os.environ.get('ENV_YB_PATH_BIN_LOCAL')\n",
+    "# NB_YB_PATH_DATA=os.environ.get('ENV_YB_PATH_DATA_LOCAL')\n",
+    "# NB_GITPOD_WORKSPACE_URL=os.environ.get('ENV_GITPOD_WORKSPACE_URL_LOCAL')\n",
     "##\n",
     "### End: Gitpod or local\n",
     "\n",
     "# env_vars defines the following\n",
-    "MY_DB_NAME=os.environ.get('MY_DB_NAME')\n",
-    "MY_DB_PORT=os.environ.get('MY_DB_PORT')\n",
+    "NB_DB_NAME=os.environ.get('ENV_DB_NAME')\n",
+    "NB_DB_PORT=os.environ.get('ENV_DB_PORT')\n",
     "\n",
-    "MY_HOST_IPv4_01=os.environ.get('MY_HOST_IPv4_01')\n",
-    "MY_HOST_IPv4_02=os.environ.get('MY_HOST_IPv4_02')\n",
-    "MY_HOST_IPv4_03=os.environ.get('MY_HOST_IPv4_03')\n",
+    "NB_HOST_IPv4_01=os.environ.get('ENV_HOST_IPv4_01')\n",
+    "NB_HOST_IPv4_02=os.environ.get('ENV_HOST_IPv4_02')\n",
+    "NB_HOST_IPv4_03=os.environ.get('ENV_HOST_IPv4_03')\n",
     "\n",
-    "MY_MASTER_WEB_PORT=os.environ.get('MY_MASTER_WEB_PORT')\n",
-    "MY_TSERVER_WEBSERVER_PORT=os.environ.get('MY_TSERVER_WEBSERVER_PORT')\n",
-    "MY_YUGABYTED_WEB_UI_PORT=os.environ.get('MY_YUGABYTED_WEB_UI_PORT')\n",
+    "NB_MASTER_WEB_PORT=os.environ.get('ENV_MASTER_WEB_PORT')\n",
+    "NB_TSERVER_WEBSERVER_PORT=os.environ.get('ENV_TSERVER_WEBSERVER_PORT')\n",
+    "NB_YUGABYTED_WEB_UI_PORT=os.environ.get('ENV_YUGABYTED_WEB_UI_PORT')\n",
     "\n",
-    "MY_YB_MASTER_HOST_GITPOD_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://'+MY_MASTER_WEB_PORT+'-')\n",
-    "MY_YB_TSERVER_HOST_GITPOD_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://'+MY_TSERVER_WEBSERVER_PORT+'-')\n",
-    "MY_YUGABYTED_UI_HOST_GITPOD_URL = MY_GITPOD_WORKSPACE_URL.replace('https://','https://'+MY_YUGABYTED_WEB_UI_PORT+'-')\n",
+    "NB_YB_MASTER_HOST_GITPOD_URL = NB_GITPOD_WORKSPACE_URL.replace('https://','https://'+NB_MASTER_WEB_PORT+'-')\n",
+    "NB_YB_TSERVER_HOST_GITPOD_URL = NB_GITPOD_WORKSPACE_URL.replace('https://','https://'+NB_TSERVER_WEBSERVER_PORT+'-')\n",
+    "NB_YUGABYTED_UI_HOST_GITPOD_URL = NB_GITPOD_WORKSPACE_URL.replace('https://','https://'+NB_YUGABYTED_WEB_UI_PORT+'-')\n",
     "\n",
     "\n",
     "# Current directory of project and related child folders\n",
-    "MY_NOTEBOOK_DIR=os.getcwd()\n",
-    "MY_NOTEBOOK_DATA_FOLDER=MY_NOTEBOOK_DIR +'/data'\n",
-    "MY_NOTEBOOK_UTILS_FOLDER=MY_NOTEBOOK_DIR + '/utils'\n",
+    "NB_NOTEBOOK_DIR=os.getcwd()\n",
+    "NB_NOTEBOOK_DATA_FOLDER=NB_NOTEBOOK_DIR +'/data'\n",
+    "NB_NOTEBOOK_UTILS_FOLDER=NB_NOTEBOOK_DIR + '/utils'\n",
     "\n",
     "# Data files\n",
-    "MY_DATA_DDL_FILE_0=os.environ.get(\"MY_DATA_DDL_FILE_0\")\n",
-    "MY_DATA_DML_FILE_0=os.environ.get(\"MY_DATA_DML_FILE_0\")\n",
-    "MY_DATA_DDL_FILE_1=os.environ.get(\"MY_DATA_DDL_FILE_1\")\n",
-    "MY_DATA_DML_FILE_1=os.environ.get(\"MY_DATA_DML_FILE_1\")\n",
-    "MY_DATA_DDL_FILE_2=os.environ.get(\"MY_DATA_DDL_FILE_2\")\n",
-    "MY_DATA_DML_FILE_2=os.environ.get(\"MY_DATA_DML_FILE_2\")\n",
-    "MY_DATA_DDL_FILE_3=os.environ.get(\"MY_DATA_DDL_FILE_3\")\n",
-    "MY_DATA_DML_FILE_3=os.environ.get(\"MY_DATA_DML_FILE_3\")\n",
+    "NB_DATA_DDL_FILE_0=os.environ.get('ENV_DATA_DDL_FILE_0')\n",
+    "NB_DATA_DML_FILE_0=os.environ.get('ENV_DATA_DML_FILE_0')\n",
+    "NB_DATA_DDL_FILE_1=os.environ.get('ENV_DATA_DDL_FILE_1')\n",
+    "NB_DATA_DML_FILE_1=os.environ.get('ENV_DATA_DML_FILE_1')\n",
+    "NB_DATA_DDL_FILE_2=os.environ.get('ENV_DATA_DDL_FILE_2')\n",
+    "NB_DATA_DML_FILE_2=os.environ.get('ENV_DATA_DML_FILE_2')\n",
+    "NB_DATA_DDL_FILE_3=os.environ.get('ENV_DATA_DDL_FILE_3')\n",
+    "NB_DATA_DML_FILE_3=os.environ.get('ENV_DATA_DML_FILE_3')\n",
     "\n",
-    "MY_JEOPARDY_DATA_FILE=os.environ.get(\"MY_JEOPARDY_DATA_FILE\")\n",
-    "MY_GIN_EXAMPLES=os.environ.get(\"MY_GIN_EXAMPLES\")\n",
-    "MY_GITHUB_DATA_FILE=os.environ.get(\"MY_GITHUB_DATA_FILE\")\n",
+    "NB_JEOPARDY_DATA_FILE=os.environ.get('ENV_JEOPARDY_DATA_FILE')\n",
+    "NB_GIN_EXAMPLES=os.environ.get('ENV_GIN_EXAMPLES')\n",
+    "NB_GITHUB_DATA_FILE=os.environ.get('ENV_GITHUB_DATA_FILE')\n",
     "\n",
     "# Util files\n",
-    "MY_UTIL_FUNCTIONS_FILE=os.environ.get(\"MY_UTIL_FUNCTIONS_FILE\")\n",
-    "MY_UTIL_YBTSERVER_METRICS_FILE=os.environ.get(\"MY_UTIL_YBTSERVER_METRICS_FILE\")\n",
+    "NB_UTIL_FUNCTIONS_FILE=os.environ.get('ENV_UTIL_FUNCTIONS_FILE')\n",
+    "NB_UTIL_YBTSERVER_METRICS_FILE=os.environ.get('ENV_UTIL_YBTSERVER_METRICS_FILE')\n",
     "\n",
     "\n",
     "# Store the note book values for other notebooks to use\n",
     "\n",
-    "%store MY_YB_PATH\n",
-    "%store MY_YB_PATH_DATA\n",
-    "%store MY_GITPOD_WORKSPACE_URL\n",
+    "%store NB_YB_PATH\n",
+    "%store NB_YB_PATH_DATA\n",
+    "%store NB_GITPOD_WORKSPACE_URL\n",
     "\n",
-    "%store MY_DB_NAME\n",
-    "%store MY_DB_PORT\n",
+    "%store NB_DB_NAME\n",
+    "%store NB_DB_PORT\n",
     "\n",
-    "%store MY_HOST_IPv4_01\n",
-    "%store MY_HOST_IPv4_02\n",
-    "%store MY_HOST_IPv4_03\n",
+    "%store NB_HOST_IPv4_01\n",
+    "%store NB_HOST_IPv4_02\n",
+    "%store NB_HOST_IPv4_03\n",
     "\n",
-    "%store MY_MASTER_WEB_PORT\n",
-    "%store MY_TSERVER_WEBSERVER_PORT\n",
-    "%store MY_YUGABYTED_WEB_UI_PORT\n",
+    "%store NB_MASTER_WEB_PORT\n",
+    "%store NB_TSERVER_WEBSERVER_PORT\n",
+    "%store NB_YUGABYTED_WEB_UI_PORT\n",
     "\n",
-    "%store MY_YB_MASTER_HOST_GITPOD_URL\n",
-    "%store MY_YB_TSERVER_HOST_GITPOD_URL\n",
-    "%store MY_YUGABYTED_UI_HOST_GITPOD_URL\n",
+    "%store NB_YB_MASTER_HOST_GITPOD_URL\n",
+    "%store NB_YB_TSERVER_HOST_GITPOD_URL\n",
+    "%store NB_YUGABYTED_UI_HOST_GITPOD_URL\n",
     "\n",
-    "%store MY_NOTEBOOK_DIR\n",
-    "%store MY_NOTEBOOK_DATA_FOLDER\n",
-    "%store MY_NOTEBOOK_UTILS_FOLDER\n",
+    "%store NB_NOTEBOOK_DIR\n",
+    "%store NB_NOTEBOOK_DATA_FOLDER\n",
+    "%store NB_NOTEBOOK_UTILS_FOLDER\n",
     "\n",
-    "%store MY_DATA_DDL_FILE_0\n",
-    "%store MY_DATA_DML_FILE_0\n",
-    "%store MY_DATA_DDL_FILE_1\n",
-    "%store MY_DATA_DML_FILE_1\n",
-    "%store MY_DATA_DDL_FILE_2\n",
-    "%store MY_DATA_DML_FILE_2\n",
-    "%store MY_DATA_DDL_FILE_3\n",
-    "%store MY_DATA_DML_FILE_3\n",
+    "%store NB_DATA_DDL_FILE_0\n",
+    "%store NB_DATA_DML_FILE_0\n",
+    "%store NB_DATA_DDL_FILE_1\n",
+    "%store NB_DATA_DML_FILE_1\n",
+    "%store NB_DATA_DDL_FILE_2\n",
+    "%store NB_DATA_DML_FILE_2\n",
+    "%store NB_DATA_DDL_FILE_3\n",
+    "%store NB_DATA_DML_FILE_3\n",
     "\n",
-    "%store MY_JEOPARDY_DATA_FILE\n",
-    "%store MY_GIN_EXAMPLES\n",
-    "%store MY_GITHUB_DATA_FILE\n",
+    "%store NB_JEOPARDY_DATA_FILE\n",
+    "%store NB_GIN_EXAMPLES\n",
+    "%store NB_GITHUB_DATA_FILE\n",
     "\n",
-    "%store MY_UTIL_FUNCTIONS_FILE\n",
-    "%store MY_UTIL_YBTSERVER_METRICS_FILE"
+    "%store NB_UTIL_FUNCTIONS_FILE\n",
+    "%store NB_UTIL_YBTSERVER_METRICS_FILE"
    ]
   },
   {
@@ -314,19 +314,19 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # create database\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\"  # create database\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "# terminate connections, drop, and create\n",
-    "./bin/ysqlsh -d yugabyte -c \"select pg_terminate_backend(pid) from pg_stat_activity where datname = '\"${DB_NAME}\"';\"  \n",
-    "./bin/ysqlsh -d yugabyte -c \"drop database if exists \"${DB_NAME}\";\"  \n",
-    "./bin/ysqlsh -d yugabyte -c \"create database \"${DB_NAME}\";\" \n",
+    "./ysqlsh -d yugabyte -c \"select pg_terminate_backend(pid) from pg_stat_activity where datname = '\"${DB_NAME}\"';\"  \n",
+    "./ysqlsh -d yugabyte -c \"drop database if exists \"${DB_NAME}\";\"  \n",
+    "./ysqlsh -d yugabyte -c \"create database \"${DB_NAME}\";\" \n",
     "\n",
     "# list dbs\n",
-    "./bin/ysqlsh -d yugabyte -c \"\\l\""
+    "./ysqlsh -d yugabyte -c \"\\l\""
    ]
   },
   {
@@ -365,8 +365,8 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_UTILS_FOLDER\" \"$MY_UTIL_FUNCTIONS_FILE\"  # util functions\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" \"$NB_NOTEBOOK_UTILS_FOLDER\" \"$NB_UTIL_FUNCTIONS_FILE\"  # util functions\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "UTILS_FOLDER=${3}\n",
     "UTIL_FUNCTIONS_FILE=${4}\n",
@@ -375,14 +375,14 @@
     "#ls $UTIL_FOLDER\n",
     "UTIL_FUNCTIONS_FILE_PATH=${UTILS_FOLDER}/${UTIL_FUNCTIONS_FILE}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "# Functions file\n",
-    "./bin/ysqlsh -q -d ${DB_NAME} -f ${UTIL_FUNCTIONS_FILE_PATH} \n",
+    "./ysqlsh -q -d ${DB_NAME} -f ${UTIL_FUNCTIONS_FILE_PATH} \n",
     "sleep 1;\n",
     "\n",
     "# Describe functions\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\df public.fn_*\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\df public.fn_*\""
    ]
   },
   {
@@ -407,8 +407,8 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_UTILS_FOLDER\" \"$MY_UTIL_YBTSERVER_METRICS_FILE\"  # utl metrics\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" \"$NB_NOTEBOOK_UTILS_FOLDER\" \"$NB_UTIL_YBTSERVER_METRICS_FILE\"  # utl metrics\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "UTILS_FOLDER=${3}\n",
     "UTIL_YBTSERVER_METRICS_FILE=${4}\n",
@@ -420,10 +420,10 @@
     "cd $YB_PATH\n",
     "\n",
     "# Metrics file\n",
-    "./bin/ysqlsh -d ${DB_NAME} -f ${UTIL_YBTSERVER_METRICS_FILE} >&/dev/null\n",
+    "./ysqlsh -d ${DB_NAME} -f ${UTIL_YBTSERVER_METRICS_FILE} >&/dev/null\n",
     "\n",
     "# Describe relations\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\df public.fn_yb*\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\df public.fn_yb*\""
    ]
   },
   {
@@ -448,8 +448,8 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\" \"$MY_NOTEBOOK_DATA_FOLDER\" \"$MY_DATA_DDL_FILE_0\" \"$MY_DATA_DML_FILE_0\"   # World Cities\n",
-    "YB_PATH=${1}\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\" \"$NB_NOTEBOOK_DATA_FOLDER\" \"$NB_DATA_DDL_FILE_0\" \"$NB_DATA_DML_FILE_0\"   # World Cities\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "DATA_FOLDER=${3}\n",
     "DATA_DDL_FILE=${4}\n",
@@ -463,15 +463,15 @@
     "cd ${YB_PATH}\n",
     "\n",
     "# DDL file\n",
-    "./bin/ysqlsh -d ${DB_NAME} -f ${WORLD_DDL_PATH} >&/dev/null\n",
+    "./ysqlsh -d ${DB_NAME} -f ${WORLD_DDL_PATH} >&/dev/null\n",
     "sleep 1;\n",
     "\n",
     "# DML file\n",
-    "./bin/ysqlsh -d ${DB_NAME} -f ${WORLD_DML_PATH} >&/dev/null\n",
+    "./ysqlsh -d ${DB_NAME} -f ${WORLD_DML_PATH} >&/dev/null\n",
     "sleep 1;\n",
     "\n",
     "# Describe relations\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d public.*\""
+    "./ysqlsh -d ${DB_NAME} -c \"\\d public.*\""
    ]
   },
   {
@@ -501,17 +501,17 @@
    },
    "outputs": [],
    "source": [
-    "%%bash -s \"$MY_YB_PATH\" \"$MY_DB_NAME\"  # \\d tbl_countriees\n",
+    "%%bash -s \"$NB_YB_PATH_BIN\" \"$NB_DB_NAME\"  # \\d tbl_countriees\n",
     "\n",
-    "YB_PATH=${1}\n",
+    "YB_PATH_BIN=${1}\n",
     "DB_NAME=${2}\n",
     "\n",
-    "cd $YB_PATH\n",
+    "cd $YB_PATH_BIN\n",
     "\n",
     "\n",
-    "./bin/ysqlsh -d ${DB_NAME} -c \"\\d tbl_countries\"\n",
-    "#./bin/ysqlsh -d ${DBNAME} -c \"\\d tbl_countries\"\n",
-    "#./bin/ysqlsh -d ${DBNAME} -c \"\\d tbl_states\"\n"
+    "./ysqlsh -d ${DB_NAME} -c \"\\d tbl_countries\"\n",
+    "./ysqlsh -d ${DB_NAME} -c \"\\d tbl_cities\"\n",
+    "#./ysqlsh -d ${DB_NAME} -c \"\\d tbl_states\"\n"
    ]
   },
   {
@@ -539,8 +539,8 @@
     "import sqlalchemy as alc\n",
     "from sqlalchemy import create_engine\n",
     "\n",
-    "db_host = MY_HOST_IPv4_01\n",
-    "db_name = MY_DB_NAME\n",
+    "db_host = NB_HOST_IPv4_01\n",
+    "db_name = NB_DB_NAME\n",
     "\n",
     "connection_str = 'postgresql+psycopg2://yugabyte@'+db_host+':5433/'+db_name\n",
     "\n",
